style/style.css
@import url(https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap);

:root{
    --background-color-dark: #14213d;
    --white: #fff;
    --yellow: #fee440;
    --light-purple: #9b5de5;
    --pink: #f15bb5;
    --light-grey: #dad7cd;
    --blue: #118ab2;
    --black: #343a40;
}

.bold {
    font-weight: 700;
}

.text-center{
    text-align: center;
}

.text-white{
    color: var(--white);
}

* {
    box-sizing: border-box;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    padding: 0;
    margin: 0;
}


html {
    font-family: "Montserrat", monospace;
    font-size: 16px;
    font-weight: 400;
    background-color: var(--background-color-dark);
    scroll-behavior: smooth;
}
body{
    height: 100vh;
}

section h2{
    font-size: 4rem;
    font-weight: 700;
    letter-spacing: 0.2rem;
    margin-bottom: 15px;
    color: var(--white);
}

.reversed-linear-gradient{
    background-image: linear-gradient(to left,
    var(--pink), var(--light-purple));
    -webkit-background-clip: text;
    background-clip: text;
    -webkit-text-fill-color: transparent;
}

section h3{
    font-size: 2rem;
    font-weight: 400;
    letter-spacing: 0.2rem;
    margin-bottom: 20px;
    color: var(--white);
}
/* -- about -- */

.grid-about-container{
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: 1fr;
    /*grid-column-gap: 15vw;*/
    grid-row-gap: 3vh;
    align-items: center;
    justify-content: center;
    align-content: center;
}

.grid-about-item {
    width: 60%;
    margin: 0 auto;
}

.grid-about-item p {
    font-size: 1rem;
    font-weight: 400;
    line-height: 1.75rem;
    color: var(--white);
}

.me-image {
    width: 100%;
    height: auto;
    object-fit: cover;
    border-radius: 10px;
    margin: 0 auto;
}

/* -- end about -- */

/* -- skills --*/
.grid-container{
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: repeat(2, 1fr);
    grid-row-gap: 3vh;
    grid-column-gap: 15vw;
    align-items: center;
    justify-content: center;
    align-content: center;

}

.grid-container h3{
    text-align: center;
}
.grid-item:nth-child(1) {
    width: 60%;
    margin: 0 auto;
    grid-column: span 2;

}


.skill-section{
    display: flex;
    justify-content: space-around;
    align-items: center;
    flex-wrap: wrap;
}
.skill-section p {
    font-size: 0.75rem;
    font-weight: 400;
    letter-spacing: 0.2rem;
    border: 2px solid var(--light-grey);
    border-radius: 10px;
    text-align: center;
    padding: 0.5rem;
    margin: 0.5rem;
    color: var(--white);
}
/* -- end skills -- */

/* -- contact -- */
.form-container {
    width: 80%;
    margin: 0 auto 5rem auto;
}

.input-group {
    position: relative;
    font-size: 1rem;
    margin-bottom: 1.5rem;
}

.input {
    all: unset;
    width: 70%;
    padding: 1rem;
    border: 1px solid #9e9e9e;
    border-radius: 10px;
    transition: 150ms cubic-bezier(0.4, 0, 0.2, 1);
    background-color: var(--background-color-dark);
    color: var(--white);
    text-align: left;
}

.label{
    position: absolute;
    top: 1rem;
    left: 15%;
    color: #d4d4d4;
    pointer-events: none;
    transition: 150ms cubic-bezier(0.4, 0, 0.2, 1);
}

.input:focus {
    border: 1px solid var(--blue);
}

/* Updated CSS */
.input:not(:placeholder-shown) ~ .label,
.input:is(:focus, :valid) ~ .label {
    transform: translateY(-120%) scale(0.7);
    background-color: var(--background-color-dark);
    padding-inline: 0.3rem;
    color: var(--white);
}

.submit-button{
    position: relative;
    border: none;
    padding: 0.2rem;
    border-radius: 15px;
    font-size: 1.5rem;
    font-weight: 500;
    cursor: pointer;
    transition: 0.3s;
}

.submit-button::after{
    content: "";
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    z-index: -1;
    border-radius: 15px;
    /*background-color: white;*/
    /*background-color: var(--background-color-dark);*/
    transition: border 0.3s ease-in-out;
}

.submit-button::after{
    content: "";
    position: absolute;
    width: 0;
    height: 1px;
    top: 0;
    left: 1px;
    translate: 0 2rem;
    background-image: linear-gradient(to right,
    var(--light-purple), var(--pink), var(--yellow));
    transition: width 0.2s ease-in-out;
}

.submit-button:hover::after{
    width: 100%;
}

.calendly {
    width: 100%;
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    color: white;
    text-decoration: none;
}

/* -- end Contact */



/* -- header -- */
header.welcome-section{
    width: 100%;
    height: 120vh;
    color: var(--white);
    padding: 25vh 5% 2vh 15vw;
}
.welcome-text{
    font-size: 6rem;
    letter-spacing: 0.2rem;
    font-weight: 700;
}

.typed{
    font-size: 1.5rem;
    font-weight: 400;
    letter-spacing: 0.2rem;
    color: var(--white);
}

.button-container{
    margin-top: 10vh;
}

.transparent-text-with-linear-gradient{

}

.cv-button{
    position: relative;
    border: none;
    padding: 0.5rem 0.2rem;
    border-radius: 15px;
    font-size: 2rem;
    font-weight: 500;
    cursor: pointer;
    transition: 0.3s;
}

.cv-button::after{
    content: "";
    position: absolute;
    width: 100%;
    height: 1px;
    top: 0;
    left: 1px;
    translate: 0 2.6rem;
    background-image: linear-gradient(to right,
    var(--light-purple), var(--pink), var(--yellow));
}

.cv-button::before{
    content: "";
    position: absolute;
    width: 100%;
    height: 100%;
    top: 50%;
    left: 50%;
    translate: -50% -50%;
    opacity: 0;
    background-image:  conic-gradient(from var(--angle),
    transparent 1%, #9b5de5,#f15bb5, #fee440, #9b5de5);
    z-index: -1;
    padding: 10px;
    filter: blur(5rem);
    border-radius: 15px;
    animation: 10s spin linear infinite;
    transition: opacity 0.5s ease-in-out;
}

.cv-button:hover::before{
    opacity: 1;
}
section h2{
    padding: 20vh 5% 2vh 15vw;
}

/* -- CARD -- */

.card-container{
    display: flex;
    justify-content: space-around;
    gap: 2em;
    padding: 3em;
}

.card {
    width: 30vw;
    padding: 1em 2em;
    background-color: #001d3d;
    color: var(--white);
    border-radius: 10px;
    text-align: left;
    position: relative;
    box-shadow: -5px 5px 30px black;
}

.card-header{
    text-align: left;
    padding: 0.2em 0 0.5em 0;
}

.card-content {
    text-align: left;
    padding: 0 0 0.75em 0;
    line-height: 1.5em;
    font-size: 0.9em;
}

.card-content p {
    padding: 0.5em 0;
}

.card-image {
    width: 100%;
    height: 100%;
    border-radius: 10px;
}


.card-image img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    border-radius: 10px;
    margin: 0.75rem auto;
    box-shadow: 0 5px 20px black;
}

.card-description {
    padding: 0.5em 0;
}

.card-footer {
    padding: 0.5em 0;
}

.card-button {
    background-color: transparent;
    border: none;
    cursor: pointer;
    transition: background-color 0.5s, height 0.5s;
    margin-right: 2vw;
}

.card-button img {
    width: 36px;
    height: 36px;
}

.card-button img:hover, .social-icons img:hover {
    animation: shake-rotate 0.5s;
}

@property --angle {
    syntax: "<angle>";
    initial-value: 0deg;
    inherits: false;
}
.card::after, .card::before{
    content: '';
    width: 100%;
    height: 100%;
    /*background: linear-gradient(90deg, #a8dadc 30%, #457b9d 50%, #1d3557);*/
    /*background-image: conic-gradient(#f72585, #7209b7, #3a0ca3, #4361ee, #4cc9f0, #f72585);*/
    background-image: conic-gradient(from var(--angle),
    transparent 1%, #5e548e, #9f86c0, #3a0ca3, #be95c4, #ffbf69, #fdc500, #5e548e);
    position: absolute;
    top: 50%;
    left: 50%;
    translate: -50% -50%;
    border-radius: 10px;
    z-index: -1;
    animation: 10s spin linear infinite;
}

.card::before{
    filter: blur(6rem);
    opacity: 1;
}


@keyframes spin {
    from {
       --angle: 0deg;
    }
    to {
       --angle: 360deg;
    }
}

.auto-show {
    animation: autoShowAnimation 0.5s both;
    animation-timeline: view(70% 5%);
}

@keyframes autoShowAnimation {
    from {
        opacity: 0;
        transform: translateY(400px) scale(0.3);
    }
    to {
        opacity: 1;
        transform: translateY(0) scale(1);
    }

}

@keyframes shake-rotate {
    0% { transform: translateX(0) rotate(0); }
    25% { transform: translateX(-2px) rotate(-2deg); }
    50% { transform: translateX(2px) rotate(2deg); }
    75% { transform: translateX(-2px) rotate(-2deg); }
    100% { transform: translateX(0) rotate(0); }
}


/* -- END CARD -- */

@media screen and (max-width: 1200px) {
    .card-container{
        flex-direction: column;
        align-items: center;
        justify-content: center;
    }
    .card{
        width: 60vw;
    }

}

@media screen and (max-width: 850px) {
    .social-icons {
        flex-wrap: wrap;
    }
    section h2, .welcome-section{
        text-align: center;
        padding: 0;
    }
    .cv-button{
        font-size: 1rem;
    }
    .cv-button::after{
        translate: 0 2rem;
    }
    nav {
        padding: 3vh 0;
    }
    nav ul{
        flex-direction: column;
        align-items: center;
        justify-content: center;
    }
    nav ul li a {
        font-size: 1rem;
    }
}

@media screen and (max-width: 500px) {
    .welcome-text{
        font-size: 2rem;
    }
    section h2 {
        font-size: 1.5rem;
    }

    section h3 {
        font-size: 1.2rem;
    }

    .grid-container, .grid-about-container{
        grid-template-columns: 1fr;
        grid-template-rows: auto;
        grid-column-gap: 0;
    }
    .card{
        width: 80vw;
    }
}

.linear-gradient-text{
    background-image: linear-gradient(to right,
    var(--light-purple), var(--pink), var(--yellow));
    -webkit-background-clip: text;
    background-clip: text;
    -webkit-text-fill-color: transparent;
}


.textarea {
    height: 20vh;
}


footer {
    width: 100%;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    font-size: 1.1rem;
    color: var(--white);
    padding: 3rem;
}

.social-icons {
    display: flex;
    justify-content: center;
    gap: 4rem;
}

.footer-copyright{
    padding: 2rem;
    font-size: 1.2rem;
}

